[package]
name = "lle_simulator"
version = "0.1.0"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/lle_simulator"
description = "Lugiato-Lefever Equation Simulator use Rust & WebAssembly"


[dependencies]
lle = { path = "../lle" }
# The `console_error_panic_hook` crate provides better
rand = { version = "^0.8" }
plotters = "^0.3"
plotters-iced = "^0.1"
jkplot = { path = "../jkplot" }
anyhow = "^1"
iced = { version = "^0.3", features = ["canvas", "tokio"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
