[package]
name = "lle_simulator"
version = "0.1.0"
authors = ["ITOAR <itoar@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TsuITOAR/lle_simulator"
description = "Lugiato-Lefever Equation Simulator use Rust & Iced"


[dependencies]
lle = { path = "../lle" }
rand = { version = "^0.8" }
plotters = "^0.3"
plotters-bitmap = "^0.3"
jkplot = { path = "../jkplot", default-features = false }
anyhow = "^1"
iced = { version = "^0.3", features = ["tokio", "debug"] }
log = "^0.4"
env_logger = "^0.9"
array-init = "^2"
minifb = "*"
tokio = "*"
